Working sizing, not heat

--- a/force-app/main/default/lwc/allCompaniesMap/allCompaniesMap.html
+++ b/force-app/main/default/lwc/allCompaniesMap/allCompaniesMap.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             
-            <div class="map-container" lwc:dom="manual"></div>
+            <div class="map-container" lwc:dom="manual" style={mapContainerStyle}></div>
         </template>
 
         <!-- No locations message -->
